Orbit change for Atrium and Acic
They used to get waaaay too close.

--- a/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_b/3_Atrium.cfg
+++ b/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_b/3_Atrium.cfg
@@ -18,7 +18,7 @@
 			timewarpAltitudeLimits = 0 25 50 100 150 200 250 300
 			initialRotation = 110
 			tidallyLocked = False
-			rotationPeriod = -338340
+			rotationPeriod = -507560.167956
 			radius = 2204440
 
 			// 1/100 earth mass in kilograms
@@ -34,6 +34,7 @@
 			referenceBody = PJ2/Oynag
 			
 			//THIS IS THE ONLY FIELD IN THE ORBIT NODE YOU SHOULD CHANGE: NO IMMMMM MAKIN' MOONS!! >:(
+			//ok so why did you copy/paste this, wolf-rayet? -Luna
 			color = 0.173,0.263,0.463,1
 			
 			semiMajorAxis = 1.7E+8
@@ -41,7 +42,7 @@
 			eccentricity = 0.534
 			longitudeOfAscendingNode = 360
 			argumentOfPeriapsis = 172
-			meanAnomalyAtEpochD = 75.7 
+			meanAnomalyAtEpochD = 190
 			inclination = 153
 		}
 		ScaledVersion
