--- a/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_b/6_Acic.cfg
+++ b/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_b/6_Acic.cfg
@@ -14,7 +14,7 @@
 		Properties
 		{
 			displayName = Acic^N
-			description = Acic is a strange little moon that hangs around the 4:3 resonance with Atrium. Calculations reveal that while not expected to be of the highest physical interest, Acic has found itself in one of the few stable gravitational keyholes between Jejunum and Fundus where Atrium doesn't send a moon spiraling into the abyss of interplanetary space, or alternatively, directly into Oynag.\n\n <color=#d358c8>-Wolf Rayet AKA "Exo's Lab"</color>
+			description = Acic is a strange little moon that hangs around the 4:1 resonance with Atrium. Calculations reveal that while not expected to be of the highest physical interest, Acic has found itself in one of the few stable gravitational keyholes between Jejunum and Fundus where Atrium doesn't send a moon spiraling into the abyss of interplanetary space, or alternatively, directly into Oynag.\n\n <color=#d358c8>-Wolf Rayet AKA "Exo's Lab"</color>
 			timewarpAltitudeLimits = 0 25 50 100 150 200 250 300
 			rotationPeriod = 20750
 			radius = 92000
@@ -59,13 +59,13 @@
 			//THIS IS THE ONLY FIELD IN THE ORBIT NODE YOU SHOULD CHANGE: NO IMMMMM MAKIN' MOONS!! >:(
 			color = 0.463,0.424,0.424,1
 			
-			semiMajorAxis = 6.94E+7
+			semiMajorAxis = 67464544.7083
 			
 			eccentricity = 0.344
 			longitudeOfAscendingNode = 188
 			argumentOfPeriapsis = 274
 			meanAnomalyAtEpoch = 1.33
-			inclination = 18
+			inclination = -162
 
 			iconTexture = PJ2/KopernicusFiles/3_OuterSystem/IlioABC_b/Textures/MoonSmallest_Icon.png
 		}
