Early Game Science Balancing; Science & SOI tweak for Beddul-Dopale
* Add a config to balance science multipliers for the inner Pyri system out to Zhandar's orbit. (the mix of higher and lower sci multipliers isn't as game-breaking beyond that, but it will need to be added at some point.)
* Small tweak to armstrong science definition.
* Comment out some nonsense lines in Quank and Ogoquo's configs.
* New description for the Beddul-Dopale Barycenter and for Dopale.
* Set SOI for Beddul and Dopale to use values less than the SMA, so they do not overlap the barycenter's center. This is less realistic, in a sense, and gives Dopale a larger barycenter than Beddul, but is supposed to reduce bugs rather than make them worse.
* Biomes for Beddul and Dopale.
* Science definitions for Beddul-Dopale system by me (Luna) with some input from Caps.
* Science definitions for Mani by Wolf-Rayet and Sabine.
* Reset Atrium's mean anomaly since Acic's mean anomaly is what needed to be changed.

--- a/GameData/PJ2/Career/ScienceBalancing.cfg
+++ b/GameData/PJ2/Career/ScienceBalancing.cfg
@@ -89,10 +89,10 @@
 			!ScienceValues{}
 			ScienceValues
 			{
-				landedDataValue = 
-				inSpaceLowDataValue = 
-				inSpaceHighDataValue = 
-				recoveryValue = 
+				landedDataValue = 3
+				inSpaceLowDataValue = 2.5
+				inSpaceHighDataValue = 2
+				recoveryValue = 2
 				spaceAltitudeThreshold = 15000
 			}
 		}
@@ -104,11 +104,11 @@
 			!ScienceValues{}
 			ScienceValues
 			{
-				landedDataValue = 
-				inSpaceLowDataValue = 
-				inSpaceHighDataValue = 
-				recoveryValue = 
-				spaceAltitudeThreshold = 
+				landedDataValue = 3
+				inSpaceLowDataValue = 2.5
+				inSpaceHighDataValue = 2
+				recoveryValue = 2
+				spaceAltitudeThreshold = 2000
 			}
 		}
 	}
@@ -119,11 +119,11 @@
 			!ScienceValues{}
 			ScienceValues
 			{
-				landedDataValue = 
-				inSpaceLowDataValue = 
-				inSpaceHighDataValue = 
-				recoveryValue = 
-				spaceAltitudeThreshold = 
+				landedDataValue = 3
+				inSpaceLowDataValue = 2.5
+				inSpaceHighDataValue = 2
+				recoveryValue = 2
+				spaceAltitudeThreshold = 15000
 			}
 		}
 	}
@@ -134,11 +134,11 @@
 			!ScienceValues{}
 			ScienceValues
 			{
-				landedDataValue = 
-				inSpaceLowDataValue = 
-				inSpaceHighDataValue = 
-				recoveryValue = 
-				spaceAltitudeThreshold = 
+				landedDataValue = 5
+				inSpaceLowDataValue = 4
+				inSpaceHighDataValue = 3
+				recoveryValue = 2.5
+				spaceAltitudeThreshold = 20000
 			}
 		}
 	}
@@ -149,11 +149,11 @@
 			!ScienceValues{}
 			ScienceValues
 			{
-				landedDataValue = 
-				inSpaceLowDataValue = 
-				inSpaceHighDataValue = 
-				recoveryValue = 
-				spaceAltitudeThreshold = 
+				landedDataValue = 5
+				inSpaceLowDataValue = 4
+				inSpaceHighDataValue = 3
+				recoveryValue = 2.5
+				spaceAltitudeThreshold = 30000
 			}
 		}
 	}
@@ -164,11 +164,11 @@
 			!ScienceValues{}
 			ScienceValues
 			{
-				landedDataValue = 
-				inSpaceLowDataValue = 
-				inSpaceHighDataValue = 
-				recoveryValue = 
-				spaceAltitudeThreshold = 
+				landedDataValue = 3.5
+				inSpaceLowDataValue = 3
+				inSpaceHighDataValue = 2.5
+				recoveryValue = 2
+				spaceAltitudeThreshold = 15000
 			}
 		}
 	}
@@ -179,11 +179,11 @@
 			!ScienceValues{}
 			ScienceValues
 			{
-				landedDataValue = 
-				inSpaceLowDataValue = 
-				inSpaceHighDataValue = 
-				recoveryValue = 
-				spaceAltitudeThreshold = 
+				landedDataValue = 3.2
+				inSpaceLowDataValue = 3 
+				inSpaceHighDataValue = 2.5
+				recoveryValue = 2
+				spaceAltitudeThreshold = 3000
 			}
 		}
 	}
@@ -194,11 +194,11 @@
 			!ScienceValues{}
 			ScienceValues
 			{
-				landedDataValue = 
-				inSpaceLowDataValue = 
-				inSpaceHighDataValue = 
-				recoveryValue = 
-				spaceAltitudeThreshold = 
+				landedDataValue = 3
+				inSpaceLowDataValue = 2.4
+				inSpaceHighDataValue = 2
+				recoveryValue = 2
+				spaceAltitudeThreshold = 10000
 			}
 		}
 	}
@@ -209,11 +209,11 @@
 			!ScienceValues{}
 			ScienceValues
 			{
-				landedDataValue = 
-				inSpaceLowDataValue = 
-				inSpaceHighDataValue = 
-				recoveryValue = 
-				spaceAltitudeThreshold = 
+				landedDataValue = 3
+				inSpaceLowDataValue = 2.5
+				inSpaceHighDataValue = 2
+				recoveryValue = 2
+				spaceAltitudeThreshold = 14000
 			}
 		}
 	}
@@ -224,13 +224,13 @@
 			!ScienceValues{}
 			ScienceValues
 			{
-				landedDataValue = 
-				splashedDataValue = 
-				flyingLowDataValue = 
-				flyingHighDataValue =
-				inSpaceLowDataValue = 
-				inSpaceHighDataValue = 
-				recoveryValue = 
+				landedDataValue = 7.5
+				splashedDataValue = 8.5
+				flyingLowDataValue = 5
+				flyingHighDataValue = 4.5
+				inSpaceLowDataValue = 7
+				inSpaceHighDataValue = 5.5
+				recoveryValue = 5
 				flyingAltitudeThreshold = 
 				spaceAltitudeThreshold = 500000
 				//soi = 2145000
@@ -245,11 +245,11 @@
 			!ScienceValues{}
 			ScienceValues
 			{
-				landedDataValue = 
-				inSpaceLowDataValue = 
-				inSpaceHighDataValue = 
-				recoveryValue = 
-				spaceAltitudeThreshold = 
+				landedDataValue = 3
+				inSpaceLowDataValue = 2.5
+				inSpaceHighDataValue = 2
+				recoveryValue = 2
+				spaceAltitudeThreshold = 17000
 			}
 		}
 	}
@@ -260,12 +260,12 @@
 			!ScienceValues{}
 			ScienceValues
 			{
-				flyingLowDataValue = 
-				flyingHighDataValue =
-				inSpaceLowDataValue = 
-				inSpaceHighDataValue = 
-				recoveryValue = 
-				flyingAltitudeThreshold = 
+				flyingLowDataValue = 7.6
+				flyingHighDataValue = 7.5
+				inSpaceLowDataValue = 3.5
+				inSpaceHighDataValue = 2
+				recoveryValue = 4
+				flyingAltitudeThreshold = 120000
 				spaceAltitudeThreshold = 16000000
 				//soi = 30897000
 				//radius = 4458000
@@ -279,10 +279,10 @@
 			!ScienceValues{}
 			ScienceValues
 			{
-				inSpaceLowDataValue = 
-				inSpaceHighDataValue = 
-				recoveryValue = 
-				spaceAltitudeThreshold = 
+				inSpaceLowDataValue = 2
+				inSpaceHighDataValue = 5
+				recoveryValue = 1
+				spaceAltitudeThreshold = 5400000
 			}
 		}
 	}
@@ -293,14 +293,14 @@
 			!ScienceValues{}
 			ScienceValues
 			{
-				landedDataValue = 
-				flyingLowDataValue = 
-				flyingHighDataValue =
-				inSpaceLowDataValue = 
-				inSpaceHighDataValue = 
-				recoveryValue = 
-				flyingAltitudeThreshold = 
-				spaceAltitudeThreshold = 
+				landedDataValue = 7.5
+				flyingLowDataValue = 6.5
+				flyingHighDataValue = 5.5
+				inSpaceLowDataValue = 6.5
+				inSpaceHighDataValue = 6
+				recoveryValue = 8
+				flyingAltitudeThreshold = 45000
+				spaceAltitudeThreshold = 400000
 			}
 		}
 	}
@@ -311,15 +311,15 @@
 			!ScienceValues{}
 			ScienceValues
 			{
-				landedDataValue = 
-				splashedDataValue = 
-				flyingLowDataValue = 
-				flyingHighDataValue =
-				inSpaceLowDataValue = 
-				inSpaceHighDataValue = 
-				recoveryValue = 
-				flyingAltitudeThreshold = 
-				spaceAltitudeThreshold = 
+				landedDataValue = 7
+				splashedDataValue = 7
+				flyingLowDataValue = 6
+				flyingHighDataValue = 5
+				inSpaceLowDataValue = 6
+				inSpaceHighDataValue = 6
+				recoveryValue = 6
+				flyingAltitudeThreshold = 25000
+				spaceAltitudeThreshold = 400000
 			}
 		}
 	}
