--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_ba_ASTEROID_BELT/10_Asteroid_Quank.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_ba_ASTEROID_BELT/10_Asteroid_Quank.cfg
@@ -28,7 +28,7 @@
             inverseRotThresholdAltitude = 34000
 			ScienceValues
             {
-                spaceAltitudeThreshold = 999999
+                //spaceAltitudeThreshold = 999999
             }
             biomeMap = PJ2/KopernicusFiles/2_PyriSystem/IlioC_ba_ASTEROID_BELT/PluginData/Quank_Biome.png
             !Biomes{}
