--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_ba_ASTEROID_BELT/11_Asteroid_Ogoquo.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_ba_ASTEROID_BELT/11_Asteroid_Ogoquo.cfg
@@ -25,7 +25,7 @@
             inverseRotThresholdAltitude = 57000
 			ScienceValues
             {
-                spaceAltitudeThreshold = 999999
+                //spaceAltitudeThreshold = 999999
             }
 		}
 		Orbit
