--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_d_trojan/IlioC_dt.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_d_trojan/IlioC_dt.cfg
@@ -14,9 +14,9 @@
 		Properties
 		{
 			displayName = Beddul-Dopale Barycentre^N
-			
+			description = Beddul and Dopale are a beautiful double planet orbiting Pyri, easily visible as a pair of disks in the sky. There was a time that some Armstrong inhabitants believed there was a counterplanet balancing Armstrong in its orbit around Pyri--the Central Fire. Clearly, Beddul and Dopale are their own counterbalances--but around what fire do THEY orbit? Astronomers searched desperately for some sign of a star, or some mote of aether, that Beddul and Dopale commonly revolved around, but though this point in space could be shown mathematically, it was never, ever observed to have any physicality. We now know, of course, that the point around which Beddul and Dopale revolve is nothing more than a mathematical fiction. After all, if it were a real object, it would have to be some sort of black hole or singularity.  
 
-			radius = 100000
+			radius = 200000
 			
 			// 1/100 earth mass in kilograms
 			mass = 5.97219e22
@@ -33,13 +33,13 @@
 			
 			//sad, no extra trojans or stuff
 			//wouldnt really have fit anyways
-			
+			//ksp soi:  8623227.67m
 			ScienceValues
             {
-				inSpaceLowDataValue = 5
-				inSpaceHighDataValue = 6
-				recoveryValue = 6
-				spaceAltitudeThreshold = 4000000
+				//inSpaceLowDataValue = 5
+				//inSpaceHighDataValue = 6
+				//recoveryValue = 6
+				//spaceAltitudeThreshold = 4000000
             }
 		}
 		Orbit
