--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_d_trojan/IlioC_dt_binarylarge.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_d_trojan/IlioC_dt_binarylarge.cfg
@@ -24,21 +24,67 @@
 			mass = 5.97219e22
 			@mass *= .985
 			//Is the Germy? (That)
-			sphereOfInfluence = 2976631.16676
+			sphereOfInfluence = 2695588.0
 			
 			initialRotation = 0
 			tidallyLocked = true
 			ScienceValues
             {
-				landedDataValue = 9
-				flyingLowDataValue = 8
-				flyingHighDataValue = 6
-				inSpaceLowDataValue = 5
-				inSpaceHighDataValue = 6
-				recoveryValue = 8
-				flyingAltitudeThreshold = 45000
-				spaceAltitudeThreshold = 400000
+				//landedDataValue = 9
+				//flyingLowDataValue = 8
+				//flyingHighDataValue = 6
+				//inSpaceLowDataValue = 5
+				//inSpaceHighDataValue = 6
+				//recoveryValue = 8
+				//flyingAltitudeThreshold = 45000
+				//spaceAltitudeThreshold = 400000
             }
+			biomeMap = PJ2/KopernicusFiles/2_PyriSystem/IlioC_d_trojan/PluginData/BeddulBiomes.png
+			Biomes
+			{
+				Biome
+				{
+					name = Lowlands
+					displayName = Lowlands
+					color = RGBA(168,114,82,255)
+					value = 1
+				}
+				Biome
+				{
+					name = Midlands
+					displayName = Midlands
+					color = RGBA(202,158,90,255)
+					value = 1
+				}
+				Biome
+				{
+					name = Highlands
+					displayName = Highlands
+					color = RGBA(243,212,115,255)
+					value = 1
+				}
+				Biome
+				{
+					name = Mountains
+					displayName = Mountains
+					color = RGBA(254,233,186,255)
+					value = 1
+				}
+				Biome
+				{
+					name = EqVolcano
+					displayName = Equatorial Supervolcano
+					color = RGBA(248,141,108,255)
+					value = 1
+				}
+				Biome
+				{
+					name = SVolcano
+					displayName = Southern Supervolcano
+					color = RGBA(172,248,108,255)
+					value = 1
+				}
+			}
 		}
 		Orbit
 		{
@@ -85,7 +131,7 @@
 			enabled = True
 			oxygen = False
 			atmosphereDepth = 115000
-			atmosphereMolarMass = 0.3966
+			atmosphereMolarMass = 0.03966
 			pressureCurveIsNormalized = True
 			staticPressureASL = 1323.4
 			temperatureCurveIsNormalized = False 
