--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_d_trojan/IlioC_dt_binarysmall.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_d_trojan/IlioC_dt_binarysmall.cfg
@@ -14,7 +14,7 @@
 		Properties
 		{
 			displayName = Dopale^N
-			description = As the slightly smaller sibling to Beddul, Dopale has quite the reputation to hold up; and it sure does. \n\nBeing one of few places with liquid water clearly present, it is an amazing place to behold. Its blue stretches, broken only by sandy islands, are admired by most. \nOne could only dream of sailing across the silent waters... \n\n  -  Caps
+			description = Records of Dopale have changed over time. The earliest records of the Beddul-Dopale system indicated Beddul as a double planet made of two identical orange dots. Eventually, one of them began to pale. Records from different times describe the smaller world as brown, gray, silver-blue, and the deep blue it is recognized as today. Astronomers now believe Dopale has recently come out of a period of global cloud cover due to some kind of climate change over the course of the last century. \n\nAs the slightly smaller sibling to Beddul, Dopale has quite the reputation to hold up; and it sure does. Being one of few places with liquid water clearly present, it is an amazing place to behold. Its blue stretches, broken only by sandy islands, are admired by most. \nOne could only dream of sailing across the silent waters... \n\n  -  Caps
 			
 			//do not leave this as the placeholder radius
 			radius = 550000
@@ -27,19 +27,65 @@
 			//the tiny man
 			//comparatively
 			tidallyLocked = true
-			sphereOfInfluence = 2695588.83324
+			sphereOfInfluence = 2976631.0
 			ScienceValues
             {
-				landedDataValue = 7
-				splashedDataValue = 7
-				flyingLowDataValue = 6
-				flyingHighDataValue = 5
-				inSpaceLowDataValue = 6
-				inSpaceHighDataValue = 6
-				recoveryValue = 6
-				flyingAltitudeThreshold = 25000
-				spaceAltitudeThreshold = 400000
+				//landedDataValue = 7
+				//splashedDataValue = 7
+				//flyingLowDataValue = 6
+				//flyingHighDataValue = 5
+				//inSpaceLowDataValue = 6
+				//inSpaceHighDataValue = 6
+				//recoveryValue = 6
+				//flyingAltitudeThreshold = 25000
+				//spaceAltitudeThreshold = 400000
             }
+			biomeMap = PJ2/KopernicusFiles/2_PyriSystem/IlioC_d_trojan/PluginData/DopaleBiomes.png
+			Biomes
+			{
+				Biome
+				{
+					name = DeepOcean
+					displayName = Deep Oceans
+					color = RGBA(0,8,41,255)
+					value = 1
+				}
+				Biome
+				{
+					name = ShallowSeas
+					displayName = Shallow Seas
+					color = RGBA(8,57,90,255)
+					value = 1
+				}
+				Biome
+				{
+					name = Islands
+					displayName = Islands
+					color = RGBA(189,173,140,255)
+					value = 1
+				}
+				Biome
+				{
+					name = Mountains
+					displayName = Mountains
+					color = RGBA(255,255,255,255)
+					value = 1
+				}
+				Biome
+				{
+					name = Volcanoes
+					displayName = Volcanoes
+					color = RGBA(220,159,42,255)
+					value = 1
+				}
+				Biome
+				{
+					name = Continent
+					displayName = Continent
+					color = RGBA(206,140,140,255)
+					value = 1
+				}
+			}
 		}
 		Orbit
 		{
@@ -86,7 +132,7 @@
 			enabled = True
 			oxygen = False
 			atmosphereDepth = 75000
-			atmosphereMolarMass = 0.2909
+			atmosphereMolarMass = 0.02909
 			pressureCurveIsNormalized = True
 			staticPressureASL = 115.57
 			temperatureCurveIsNormalized = False 
