--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_e/ScienceDefinitions/Mani.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_e/ScienceDefinitions/Mani.cfg
@@ -1,4 +1,4 @@
-@EXPERIMENT_DEFINITION:HAS[#id[crewReport]]:FOR[PJ2]
+@EXPERIMENT_DEFINITION:HAS[#id[crewReport]]:FOR[PJ2] //Srf/Splashed Reports by Wolf-Rayet, InSpace by Sabine
 {
 	@RESULTS
 	{
@@ -7,7 +7,15 @@
 			name = Máni
 			Values
 			{
-			
+				SrfLandedTheReallyCoolPlace = This region was selected as a landing site for its dramatic geological form, and its wonderful views. Not going on an EVA for a stroll would be a waste.
+				SrfLandedRed = The surface is extremely firm below the craft, you've been told this region is predicted to be extraordinarily ancient compared to the rest of Máni's surface.
+				SrfLandedGreen = The greenlands are still in range of Máni's volcanic pits, during a predicted maximal eruption anyway. Yet, the fact that they are so well defined implies that Máni's full resurfacing potential is not currently on display.
+				SrfLandedYellow = You are warned ahead of any EVA operations to ensure the air-scrubbers are operating at maximum. The amount of sulfur you're going to get on your suit will be an unpleasant smell once you return to the ship.
+				SrfLandedPale = You can feel the ground shaking somewhat, no seismometer required. You just hope that eruption wasn't nearby, though if it was distant and you still felt it that dramatically... that's one hell of a firework.
+				SrfLandedCracks =  This feels like an extraordinarily dangerous mission profile. You can see out the window that this fissure is active, there's lava bubbling around the craft.
+				SrfSplashedCaldera = This feels like an extraordinarily dangerous mission profile. You can see out the window that this fissure is active, there's lava bubbling around the craft.
+				SrfLandedCaldera = It's getting really hot in here, you've been ensured you're not in any risk... but you don't actually believe that.
+				SrfSplashedCaldera = It's getting really hot in here, you've been ensured you're not in any risk... but you don't actually believe that.
 			}
 		}
 	}
@@ -21,6 +29,15 @@
 			name = Máni
 			Values
 			{
+				SrfLandedTheReallyCoolPlace = For as volcanic as Máni is now, you find solid evidence that this isn't the worst it has been, or will be. Digging into the surface, you find little red stones, scrapping at this surface reveals they almost look like chunks of silver inside. This is iron, pure iron, a remnant of a ferrovolcanic past. It's likely given enough time ferrovolcanism will restart on Máni, and completely redefine its appearance. When that happens, the pale yellow sulfuric deposits will become the fossils of a lost past.
+				SrfLandedRed = The rocks here are primarily iron, especially the deeper you go. There are trace amounts of other metals here as well, nickle, copper, one stone even holds cobalt likened to the color of Bil. How these deposits came about on the surface, and how they cover such wide areas of Máni are a mystery. As it stands Máni only gets hot enough within to erupt sulfur, leaving it a magnitude too cold for ferrovolcanism. Perhaps it was hotter in the distant past.
+				SrfLandedGreen = Ferrosilite deposits coat this region of Máni's surface, materials like this take slightly less heat to melt than metal, and perhaps this era of green material deposits represent the intermediate period between Máni's ferrovolcanic past and sulfivolcanic present.
+				SrfLandedYellow = The sulfuric deposits that layer the surface here have become a deeper shade of yellow with age, perhaps due to prolonged exposure to energy from Pyri and Ilio. While there are some indications that volcanic plumes reach these regions, it clearly doesn't happen as often as it does in the palelands. Perhaps the reach of Máni's volcanic activity has been shrinking over time as its orbit becomes more circular.
+				SrfLandedPale = You are officially within the splash zone. The sulfuric compounds you sample represent the current meta for volcanic resurfacing on Máni's surface. A lot of the material you remove is ultramafic, compounds with large amounts of magnesium. You ensure to pick up a few pyroclastic fragments as well. Volcanism as it exists on Máni is surprisingly comparable to that which occurs on Armstrong.
+				SrfLandedCracks = Carefully reaching out with essentially a space-worthy pickaxe, you tear away samples of the still hot lava and tap them off into a metal sample container. Even in your suit you can feel the heat coming off of the active volcanic fissure. Truly this is one of the more exciting days of your career.
+				SrfSplashedCracks = This is an extraordinarily uncomfortable operation, painful even, as you scoop fresh melt into a metal container with your own two gloves. Your suit was designed to handle this sampling event, but that doesn't mean it's an enjoyable experience.
+				SrfLandedCaldera = Carefully reaching out with essentially a space-worthy pickaxe, you tear away samples of the still hot lava and tap them off into a metal sample container. Even in your suit you can feel the heat coming off of the active volcanic lake. Truly this is one of the more exciting days of your career.
+				SrfSplashedCaldera = This is an extraordinarily uncomfortable operation, painful even, as you scoop fresh melt into a metal container with your own two gloves. Your suit was designed to handle this sampling event, but that doesn't mean it's an enjoyable experience.
 			
 			}
 		}
@@ -35,7 +52,15 @@
 			name = Máni
 			Values
 			{
-			
+				SrfLandedTheReallyCoolPlace = You take a step back and stare at the giant that bedazzles the skies of this lowly volcanic world. A behemoth with power comparable to the very star it orbits. The gentle sway of the magnetodisk across the rugged horizon line is akin to the sweeping of a searchlight. You wonder if Bifröst sees you, or if it would even notice at all.
+				SrfLandedRed = They weren't kidding, these lands are well and truly red. Metallic deposits stretching out as far as the eye can see. Luckily you recall that these regions of Máni experience the least volcanism, and are naturally the safest to explore. That doesn't stop your stomach from tying itself into knots whenever you feel the ground shift...
+				SrfLandedGreen = You gaze around the sky in an attempt to identify any of Bifröst's other moons, particularly Ljós, which you heard so much about in mission briefings. Where is that little lantern...
+				SrfLandedYellow = You trip and kick up a ton of yellow-hued dust. You're covered in the stuff, and you were told very specifically not to get covered in it. You're going to be smelling sulfur for the entire trip home. At the very least, doing this exposes an out of place red-orange stone, which you stash into a sample bag.
+				SrfLandedPale = As you begin to explore and characterize the surroundings you feel the ground beneath you shake, and communications with Mission Control go fuzzy. You look around until you see what you initially think is Bifröst's magnetodisk, but soon enough realize it's moving. It's a plume, a great eruption of volcanic material occuring from a point just over the horizon. You take a deep breath as you watch the material spewing into the sky, and eventually fade. Hopefully an event like that won't happen near the landing site. Hopefully.
+				SrfLandedCracks = Small fountains spew from various spots across the fissure as you gaze out across it, this seems like a dangerous viewing area. However, studying these fissure provides insight into the most active regions of Máni's surface, it's valuable data.
+				SrfSplashedCracks = Reckless. Outstandingly reckless. Even within your suit, you're going to be burned very badly by the time this EVA is done.
+				SrfLandedCaldera = You watch as the caldera before you sputters and bubbles, occasional pockets of bright red peering out of the otherwise sooty black mass. You feel like standing so close to this lake of molten rock might just be dangerous.
+				SrfSplashedCaldera = Reckless. Outstandingly reckless. Even within your suit, you're going to be burned very badly by the time this EVA is done.
 			}
 		}
 	}
@@ -49,7 +74,17 @@
 			name = Máni
 			Values
 			{
-			
+				SrfLandedTheReallyCoolPlace = The thermometer seems to be reading overall lower temperatures here than predicted. It's kinda cool here.
+				SrfLandedRed = As volcanic as Máni is, the majority of its surface exists as stagnent rock and metal. The heating largely comes from the three stars in the sky.
+				SrfLandedGreen = As volcanic as Máni is, the majority of its surface exists as stagnent rock and metal. The heating largely comes from the three stars in the sky.
+				SrfLandedYellow = As volcanic as Máni is, the majority of its surface exists as stagnent rock and metal. The heating largely comes from the three stars in the sky.
+				SrfLandedPale = As volcanic as Máni is, the majority of its surface exists as stagnent rock and metal. The heating largely comes from the three stars in the sky.
+				SrfLanded = As volcanic as Máni is, the majority of its surface exists as stagnent rock and metal. The heating largely comes from the three stars in the sky.
+
+				SrfLandedCaldera = On the banks of the active lava lake, the thermometer of course reads some decent heating. Might make for a good bonfire night.
+				SrfLandedCracks = On the edge of the active volcanic fissure, the thermometer of course reads some decent heating. Might make for a good fireplace.
+
+				SrfSplashed = The thermometer is melting, but the data you're getting in the meantime is pretty cool! Lava is, in fact, rather hot!
 			}
 		}
 	}
@@ -63,7 +98,9 @@
 			name = Máni
 			Values
 			{
-			
+				InSpace = Bifröst's radiation environment is absolutely not fun for the goo, and it's not going to leave its hibernative state no matter how hard you try to convince it.
+				SrfLandedTheReallyCoolPlace = The goo agrees that this place is very cool, but not very hospitable.
+				SrfLanded = The surface of Máni does little to entice to go into exiting its shield from the intense radiative environment of Bifröst.
 			}
 		}
 	}
@@ -77,7 +114,8 @@
 			name = Máni
 			Values
 			{
-			
+				SrfLanded = No detectable exosphere exists on Máni.
+				SrfSplashed = There is a thin layer of assumably rock vapor detectable here. It's not clear if this exospheric detection is due to the source being the lava you're floating on, or if its truly a global exosphere and being at sea level is just enough to make it detectable.
 			}
 		}
 	}
@@ -91,7 +129,19 @@
 			name = Máni
 			Values
 			{
+				InSpaceLow = Máni is a fully differentiated body, however there are some noticable mass concentrations in its mantle, which are hypothesized to be subducted regions of Mánian crust. //I did this one because I felt like this was cool - Wolf
+				
+				SrfLandedRed = The crust has a fairly regular structure below the surface, Máni has had little trouble differentiating itself thanks to its steady internal heat supply. However the upper layers of the crust seem slightly less organized.
+				SrfLandedGreen =  There seem to be various units of a lower density buried below the surface of the curst here. Otherwise the lower reaches of the crust are well organized.
+				SrfLandedYellow = The curst is well organized into near-perfect layers here, with the exception of hidden lava chambers carving away at the ground below the craft. 
 			
+				SrfLandedPale = There is an "ant farm" network of magma chambers below the surface here, connecting to various caldera on the surface, and also various other spot where volcanism has not yet been documented. Are they simply extinct volcanoes, or patient ones?
+				SrfLandedCracks = There is an "ant farm" network of magma chambers below the surface here, connecting to various caldera on the surface, and also various other spot where volcanism has not yet been documented. Are they simply extinct volcanoes, or patient ones?
+				SrfLandedCaldera = There is an "ant farm" network of magma chambers below the surface here, connecting to various caldera on the surface, and also various other spot where volcanism has not yet been documented. Are they simply extinct volcanoes, or patient ones?
+
+				SrfLandedTheReallyCoolPlace = The units below the ground seem to be buckling, as if something has gone terribly wrong in the plate techtonics here. It's as if two plates are colliding and instead of pushing eachother upwards are pushing themselves downwards.
+
+				SrfSplashed = Oof ouch the readings are being intefered with because sensors don't like melting. There's something going on down there for sure but golly it's hard to tell with all the melting happening.
 			}
 		}
 	}
@@ -105,7 +155,9 @@
 			name = Máni
 			Values
 			{
-			
+				SrfLanded = If there's an eruption on Máni, you feel it no matter where you are. It seems there's always something going off.
+				SrfSplashed = The lava doesn't provide a steady enough surface for a clean reading.
+				SrfLandedCracks = On the banks of these fissures you're able to detect some amount of proper techtonic shifting.
 			}
 		}
 	}
@@ -119,7 +171,7 @@
 			name = Máni
 			Values
 			{
-			
+				SrfSplashed = Okay so, things are getting hot, and, yeah. This is going to make a big mess. It's all melty, and if there was oxygen you might've seen some of the fabric samples bursting into flame.
 			}
 		}
 	}
@@ -133,7 +185,7 @@
 			name = Máni
 			Values
 			{
-			
+				InSpace = Fucking magnets, how do they work //Replace this one
 			}
 		}
 	}
