fix for the game not working oops
fixed an empty value in Haut Oklo's entry in ScienceBalancing.cfg

--- a/GameData/PJ2/Career/ScienceBalancing.cfg
+++ b/GameData/PJ2/Career/ScienceBalancing.cfg
@@ -231,7 +231,7 @@
 				inSpaceLowDataValue = 7
 				inSpaceHighDataValue = 5.5
 				recoveryValue = 5
-				flyingAltitudeThreshold = 
+				flyingAltitudeThreshold = 18000
 				spaceAltitudeThreshold = 500000
 				//soi = 2145000
 				//radius = 356000
